<resources>
    <string name="app_name" translatable="false">Billit</string>

    <string name="facebook_app_id" translatable="false"></string>
    <string name="fb_login_protocol_scheme" translatable="false"></string>

    //Login Activity
    <string name="required_email">Please insert e-mail</string>
    <string name="required_password">Please insert password</string>
    <string name="invalid_credentials">Invalid E-mail/Password</string>
    <string name="error_sign_in">Error to sign in, try again</string>
    <string name="invalid_user">Invalid user</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="google_failed">Google sign in failed</string>
    <string name="facebook_failed">Facebook sign in failed</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="new_account">Doesn\'t have an account?</string>
    <string name="sign_up"><u>Sign up</u></string>
    <string name="or">-- OR --</string>
    <string name="sign_in">Sign in</string>
    <string name="bt_sign_in">Sign in</string>
    <string name="close">Close</string>
    <string name="continue_as">Continue as </string>
    <string name="guest">Guest</string>

    //Register Activity
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="fields_empty">All information must be informed</string>
    <string name="success_register">Registered successfully</string>
    <string name="weak_password">Password is weak</string>
    <string name="invalid_email">Invalid e-mail</string>
    <string name="user_collision">E-mail already registered</string>
    <string name="error_user_register">Error to register user, please try again</string>
    <string name="error_send_email">Error to send email, please try again</string>
    <string name="required_name">Please insert name</string>
    <string name="required_confirm_password">Please insert confirm password</string>
    <string name="password_not_match">Passwords don\'t match</string>
    <string name="register">Register</string>
    <string name="register_email">Register with e-mail</string>
    <string name="required">Required</string>

    //Loading messages
    <string name="loading">Loading…</string>
    <string name="loading_1">Locating the required gigabytes to render…</string>
    <string name="loading_2">Spinning up the hamster…</string>
    <string name="loading_3">Shovelling coal into the server…</string>
    <string name="loading_4">Please wait until the sloth starts moving</string>
    <string name="loading_5">Don\'t think of purple hippos…</string>
    <string name="loading_6">We\'re building the buildings as fast as we can</string>
    <string name="loading_7">(Insert quarter)</string>

    //Reset Password Activity
    <string name="reset_password">Reset Password</string>
    <string name="reset">Reset</string>
    <string name="email_sent">Check your e-mail box, an e-mail was sent to reset the password.</string>
    <string name="hello">Hello</string>
    <string name="ok">OK</string>

    //Tabs
    <string name="bills">Bills</string>
    <string name="activities">Activities</string>
    <string name="suggested_debts">Suggested Debts</string>

    //Bill Details Activity
    <string name="title">Title</string>
    <string name="pick_date">Pick a date</string>
    <string name="total">Total</string>
    <string name="total_amount">Total: %1$.2f</string>
    <string name="owner_name">Owner: %1s</string>
    <string name="add_friends">Add Friends</string>
    <string name="add_friends_to_share">Add friends to share the bill</string>
    <string name="required_date">Please insert date</string>
    <string name="required_title">Please insert title</string>
    <string name="required_friends">It\'s required at least 2 people</string>
    <string name="amount">Amount</string>
    <string name="bill_details">Bill Details</string>
    <string name="pay">Pay</string>
    <string name="paid">Paid</string>
    <string name="date_format_error">Date format must be \'10–10–2020\'</string>
    <string name="divide_amount">How much did your friend pay?</string>
    <string name="attach">Attach</string>
    <string name="amount_exceeded">Amount exceeded: %1$.2f</string>
    <string name="amount_left">Amount left of: %1$.2f</string>

    //Friend Activity
    <string name="friends">Friends</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="attention">Attention</string>
    <string name="delete_firebase">Do you want to delete?</string>
    <string name="add_friend_title">Add a new friend</string>
    <string name="done">Done</string>
    <string name="error_delete_friend">Error in deleting friend, try again</string>
    <string name="error_add_friend">Error in add/edit friend, try again</string>
    <string name="no_friend_found">No friend found, add friends by pressing the bottom button</string>

    //Attach Activity
    <string name="upload_image">Uploading image…</string>
    <string name="upload_image_success">Image uploaded with Success</string>
    <string name="error_upload">Error in uploading the image</string>
    <string name="no_images">No images found, use the "button" to add pictures</string>
    <string name="no_internet">Action not possible, no internet connection</string>
    <string name="error_image_upload">Error to upload the image!</string>
    <string name="image">Image</string>

    //Bill Activity
    <string name="amount_higher_zero">The amount must be higher than 0</string>
    <string name="payment">Payment</string>
    <string name="search">Search</string>
    <string name="share_code">Share code</string>
    <string name="debts">%d debts</string>
    <string name="no_bill_found">No bills found</string>
    <string name="amount_exceed_total">The amount cannot exceed the total of %1$.2f</string>
    <string name="insert_share_code">Insert share code</string>
    <string name="not_found_share_code">Share code not found</string>
    <string name="must_sign_in">You must sign in to continue</string>
    <string name="just_owner">Just the owner can modify this</string>
    <string name="add_share_code">Add share code</string>
    <string name="new_bill">New bill</string>
    <string name="success_payment">Payment is done successfully</string>
    <string name="no_debts_found">No debts found :)</string>

    //Activities Activity
    <string name="created">Created</string>
    <string name="edited">Edited</string>
    <string name="owes">owes</string>
    <string name="deleted_image">Deleted 1 image</string>
    <string name="added_images">Added %d image(s)"</string>
    <string name="paid_in_bill">%1$s paid on bill: %2$.2f</string>
    <string name="friend_paid">%1$s paid %2$s amount of: %3$.2f</string>

    //Settings Activity
    <string name="settings">Settings</string>
    <string name="currency_selected">Currency %1$S - %2$s selected</string>
    <string name="sign_out">Sign out</string>
    <string name="social">Social</string>
    <string name="preferences">Preferences</string>
    <string name="change_image">Change image</string>
    <string name="change_name">Change name</string>
    <string name="language">Language</string>
    <string name="change_currency">Change default currency</string>
    <string name="insert_new_name">Insert new name</string>
    <string name="select_currency">Select your default currency</string>
    <string name="name_change_success">Name changed successfully</string>
    <string name="error_log_out">Error trying to log out</string>

</resources>
