<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_bills">

    <fragment
        android:id="@+id/navigation_activities"
        android:name="com.fernando.billit.ui.main.ActivitiesFragment"
        android:label="@string/activities"
        tools:layout="@layout/fragment_activities" />

    <fragment
        android:id="@+id/navigation_bills"
        android:name="com.fernando.billit.ui.main.BillFragment"
        android:label="@string/bills"
        tools:layout="@layout/fragment_bill" />

    <fragment
        android:id="@+id/navigation_suggested"
        android:name="com.fernando.billit.ui.main.SuggestedDebtsFragment"
        android:label="@string/suggested_debts"
        tools:layout="@layout/fragment_suggested_debts" />
</navigation>