<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rounded_6dp"
    android:backgroundTint="@color/colorPrimary"
    android:clipToPadding="false"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/divide_amount"
        android:textAlignment="center"
        android:textColor="@color/text_white"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_name_friend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name"
            android:textAlignment="viewStart"
            android:textColor="@color/text_white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/paid"
            android:textColor="@color/text_white" />

        <EditText
            android:id="@+id/et_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:autofillHints="@string/amount"
            android:ems="5"
            android:hint="@string/amount"
            android:inputType="numberDecimal"
            android:maxLength="25"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_cancel_bill_pay"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/billit_red"
            android:text="@android:string/cancel"
            android:textColor="@color/text_white" />

        <Button
            android:id="@+id/bt_pay_bill"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/billit_blue"
            android:text="@string/save"
            android:textColor="@color/text_white" />
    </LinearLayout>


</LinearLayout>